// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PasswordUpdateForm should call onSubmit prop on submit 1`] = `
<form
  class=""
>
  <div
    style="height: 50px; margin-bottom: 16px;"
  />
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      New Password
    </label>
    <input
      class="form-control"
      data-testid="passwordUpdateForm__password"
      placeholder="Enter new password"
      type="password"
      value=""
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      Repeat Password
    </label>
    <input
      class="form-control"
      data-testid="passwordUpdateForm__passwordMatch"
      placeholder="Repeat password"
      type="password"
      value=""
    />
  </div>
  <button
    class="btn btn-primary"
    data-testid="submitButton"
    disabled=""
    type="submit"
  >
    <div
      class="spinner-container"
    />
    <span>
      Update Password
    </span>
  </button>
</form>
`;

exports[`components/PasswordUpdateForm should render spinner when loading 1`] = `
<form
  class=""
>
  <div
    style="height: 50px; margin-bottom: 16px;"
  />
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      New Password
    </label>
    <input
      class="form-control"
      data-testid="passwordUpdateForm__password"
      placeholder="Enter new password"
      type="password"
      value=""
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      Repeat Password
    </label>
    <input
      class="form-control"
      data-testid="passwordUpdateForm__passwordMatch"
      placeholder="Repeat password"
      type="password"
      value=""
    />
  </div>
  <button
    class="btn btn-primary"
    data-testid="submitButton"
    disabled=""
    type="submit"
  >
    <div
      class="spinner-container"
    >
      <span
        aria-hidden="true"
        class="spinner-border spinner-border-sm"
        role="status"
      />
    </div>
    <span>
      Update Password
    </span>
  </button>
</form>
`;

exports[`components/PasswordUpdateForm should render submit button disabled by default 1`] = `
<form
  class=""
>
  <div
    style="height: 50px; margin-bottom: 16px;"
  />
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      New Password
    </label>
    <input
      class="form-control"
      data-testid="passwordUpdateForm__password"
      placeholder="Enter new password"
      type="password"
      value=""
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      Repeat Password
    </label>
    <input
      class="form-control"
      data-testid="passwordUpdateForm__passwordMatch"
      placeholder="Repeat password"
      type="password"
      value=""
    />
  </div>
  <button
    class="btn btn-primary"
    data-testid="submitButton"
    disabled=""
    type="submit"
  >
    <div
      class="spinner-container"
    />
    <span>
      Update Password
    </span>
  </button>
</form>
`;

exports[`components/PasswordUpdateForm should render successfully 1`] = `
<form
  class=""
>
  <div
    style="height: 50px; margin-bottom: 16px;"
  />
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      New Password
    </label>
    <input
      class="form-control"
      data-testid="passwordUpdateForm__password"
      placeholder="Enter new password"
      type="password"
      value=""
    />
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      Repeat Password
    </label>
    <input
      class="form-control"
      data-testid="passwordUpdateForm__passwordMatch"
      placeholder="Repeat password"
      type="password"
      value=""
    />
  </div>
  <button
    class="btn btn-primary"
    data-testid="submitButton"
    disabled=""
    type="submit"
  >
    <div
      class="spinner-container"
    />
    <span>
      Update Password
    </span>
  </button>
</form>
`;
